# workday-payroll

./: README.md  pyproject.toml  requirements.txt
config/: tax_config.yaml  workday_config.yaml
docs/: api_documentation.md  payroll_process_flow.md  setup_guide.md
src/: __init__.py
src/deductions/: __init__.py  benefits_deduction.py  garnishment.py  retirement_deduction.py
src/integrations/: __init__.py  direct_deposit.py  time_tracking.py  workday_api.py
src/payroll/: __init__.py  compensation_calculator.py  payroll_processor.py  payroll_run.py
src/reports/: __init__.py  payroll_summary.py  tax_reports.py  year_end_reports.py
src/tax/: __init__.py  federal_tax.py  state_tax.py  tax_tables.py
tests/: __init__.py  conftest.py  test_deductions.py  test_payroll_processor.py  test_tax_calculations.py
